--- a/app/src/main/res/layout/item_forcast.xml
+++ b/app/src/main/res/layout/item_forcast.xml
@@ -5,7 +5,7 @@
     android:layout_width="wrap_content"
     android:padding="8dp"
     android:layout_height="wrap_content"
-    tools:context=".ui.MainActivity">
+    tools:context=".ui.main.MainActivity">
 
     <ImageView
         android:id="@+id/cloudy"
